--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -95,6 +95,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>5.0.4.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
