--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/marketplace-uca
 spring.datasource.username=postgres
-spring.datasource.password=admin123
+spring.datasource.password=Demo2004
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
