--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
 
 spring.mail.host=${EMAIL_HOST}
 spring.mail.port=${EMAIL_PORT}
